# CodeBundler

./: CMakeLists.txt  README.md
include/: bundleparser.hpp  bundler.hpp  constants.hpp  exceptions.hpp  options.hpp  unbundler.hpp  utilities.hpp
include/codebundler/: codebundler.hpp  errors.hpp  git_loader.hpp  handles.hpp  options.hpp  processpipe.hpp
src/: CMakeLists.txt  bundleparser.cpp  bundler.cpp  constants.hpp  file_combiner.cpp  file_combiner.hpp  file_extractor.cpp  file_extractor.hpp  file_matcher.cpp  file_matcher.hpp  file_processor.cpp  file_processor.hpp  main.cpp  types.hpp  unbundler.cpp  utilities.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  codebundler_test.cpp  file_combiner_test.cpp  file_extractor_test.cpp  file_matcher_test.cpp  file_processor_test.cpp  test_bundler.cpp  test_unbundler.cpp  utils_test.cpp
